--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #????
-server.port=80
+server.port=8099
 
 #mysql ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,3 +18,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Live Reload ?? ???
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
