--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8099
 
 #mysql ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:4406/shop?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -20,5 +20,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Live Reload ?? ???
-spring.devtools.livereload.enabled=true
-spring.thymeleaf.cache=false
+#spring.devtools.livereload.enabled=true
+#spring.thymeleaf.cache=false
