--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=
 
 # h2 db ????
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#?? ?? ?? ??
+spring.jpa.properties.hibernate.show_sql=true
+
+#???? ?? ??? ?? ??
+spring.jpa.properties.hibernate.format_sql=true
+
+#?? ???? ???? ??? ???? ??
+logging.level.org.hibernate.type.descriptor.sql=trace
