--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,18 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#?? ??? ?? ???
+spring.servlet.multipart.max-file-size=20MB
+
+#??? ?? ?? ??
+spring.servlet.multipart.max-request-size=100MB
+
+#?? ??? ??? ??
+itemImgLocation=C:/shop/item
+
+#??? ??? ??
+uploadPath=file:///C:/shop/
+
 #Live Reload ?? ???
 #spring.devtools.livereload.enabled=true
 #spring.thymeleaf.cache=false
