--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #?? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+
+#?? ??? ??? ??
+itemImgLocation=C:/shop/item
+
+#??? ??? ??
+uploadPath=file:///C:/shop/
